--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,11 +1,15 @@
 name: repository_dispatch working
 on:
+  pull_request:
+    types: opened
+    branches:
+      - jira
   repository_dispatch:
     event-type : [event-triggered-by-jira]
  # pull_request:
 
 jobs:
-  run-github-actions:
+  Jira_approval:
     runs-on: ubuntu-latest
     steps:
       - name: Simple Java Script Action
