--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -10,6 +10,7 @@ on:
 
 jobs:
   Jira_approval:
+    if: ${{ github.events == 'repository_dispatch' }}
     runs-on: ubuntu-latest
     steps:
       - name: Simple Java Script Action
