--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   Jira_approval:
-    if: ${{ github.events == 'repository_dispatch' }}
+    #if: ${{ github.events == 'repository_dispatch' }}
     runs-on: ubuntu-latest
     steps:
       - name: Simple Java Script Action
